--- a/css/form.css
+++ b/css/form.css
@@ -19,13 +19,13 @@
 }
 
 .form__label-title, .form__label-description, .form__legend-priority {
-    color: #858585;
+    color: var(--color-non-active);
     font-size: 14px;
     margin-bottom: 0.5rem;
 }
 
 .form__title, .form__description, .form__priority {
-    border: 1px solid #858585;
+    border: 1px solid var(--color-non-active);
     border-radius: 2px;
     margin-bottom: 1rem;
     font-size: 18px;
@@ -33,7 +33,7 @@
 }
 
 .form__title:focus, .form__description:focus {
-    border: 1px solid #423FF9;
+    border: 1px solid var(--color-secondary);
     box-shadow: 0 0 2px;
     background-color: #f5f5ff;
     outline: none;
@@ -72,10 +72,10 @@ input[type="radio"] {
 }
 
 input[type="radio"]:checked {
-    background-color: #423FF9;
+    background-color: var(--color-secondary);
 }
 
-.form__btn-wrapper{
+.form__btn-wrapper {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -85,25 +85,30 @@ input[type="radio"]:checked {
     min-height: 2rem;
     min-width: 9rem;
     font-size: 16px;
-    border: 1px solid #423FF9;
+    border: 1px solid var(--color-secondary);
     border-radius: 5px;
-    color: #ffffff;
+    color: var(--color-button);
 }
 
-.form__btn-create, .form__btn-edit, .form__btn-create:hover, .form__btn-edit:hover {
-    background-color: #423FF9;
+.form__btn-create, .form__btn-edit,
+.form__btn-create:hover, .form__btn-edit:hover,
+.form__btn-create:focus, .form__btn-edit:focus {
+    background-color: var(--color-secondary);
 }
 
 .form__btn-close {
-    color: #a4a3a3;
+    color: var(--color-non-active-button);
 }
 
-.form__btn-close:hover {
-    background-color: #423FF9;
-    color: #ffffff;
+.form__btn-close:hover, .form__btn-close:focus {
+    background-color: var(--color-secondary);
+    color: var(--color-button);
 }
 
-.form__btn-close:hover ~ .form__btn-create, .form__btn-close:hover ~ .form__btn-edit {
-    background-color: #ffffff;
-    color: #a4a3a3;
+.form__btn-close:hover ~ .form__btn-create,
+.form__btn-close:hover ~ .form__btn-edit,
+.form__btn-close:focus ~ .form__btn-create,
+.form__btn-close:focus ~ .form__btn-edit {
+    background-color: var(--color-button);
+    color: var(--color-non-active-button);
 }
