--- a/css/tabs.css
+++ b/css/tabs.css
@@ -16,14 +16,14 @@
     height: 100%;
     outline: none;
     text-decoration: none;
-    color: #858585;
+    color: var(--color-non-active);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .active {
-    color: #e77a0e;
+    color: var(--color-main);
     position: relative;
     padding-bottom: 0.5rem;
 }
@@ -33,7 +33,7 @@
     width: 50px;
     height: 2px;
     position: absolute;
-    left: calc(50% - 50 / 2);
+    left: 35%;
     bottom: 0;
-    background: #e77a0e;
+    background: var(--color-main);
 }
